fix carousel overflow shadow : add margin to childrens

--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -17,6 +17,10 @@
     transition: var(--transitionTime);
     display: flex;
     gap: 10px;
+
+    &>* {
+      margin: 10px 0;
+    }
   }
 }
 
